# QtGit

./: README.md
FieldSurveySystem/: .gitignore  CMakeLists.txt
FieldSurveySystem/include/: AcquisitionController.h  CloudSync.h  DataAnalyzer.h  DataExporter.h  DataModels.h  DataParser.h  DeviceClient.h  MainWindow.h  ProjectManager.h
FieldSurveySystem/src/: AcquisitionController.cpp  CloudSync.cpp  DataAnalyzer.cpp  DataExporter.cpp  DataParser.cpp  DeviceClient.cpp  MainWindow.cpp  ProjectManager.cpp  main.cpp
FieldSurveySystem/tests/: mock_device.py
FieldSurveySystem/ui/: MainWindow.ui
sample_CODEUi/: dialog.cpp  dialog.h  main.cpp  sample2_3.pro
sample_Event/: sample6_1.pro  widget.cpp  widget.h  widget.ui
sample_FirstDialog/: dialog.cpp  dialog.h  dialog.ui  sample2_2.pro  sample2_2.pro.user.d8583c7
sample_FirstUi/: widget.cpp  widget.h  widget.ui
sample_HelloWorld/: sample1_1.pro  widget.cpp  widget.ui
sample_QChar/: sample4_1.pro  widget.cpp  widget.h  widget.ui
sample_QString/: widget.cpp  widget.h  widget.ui
sample_QStringList/: mainwindow.cpp  mainwindow.h  mainwindow.ui  sample5_1.pro.user.d8583c7
sample_Value/: sample4_3.pro.user.d8583c7  widget.cpp  widget.h  widget.ui
sample_colunm/: mainwindow.cpp  mainwindow.h  mainwindow.ui  sample4_13.pro.user.d8583c7
sample_meteInfo/: sample3_1.pro  tperson.cpp  tperson.h  widget.cpp  widget.h  widget.ui
